fixed color contrasts

--- a/style.css
+++ b/style.css
@@ -778,7 +778,7 @@ h4 {
 }
 
 .tc-white {
-  color: #f3976c !important;
+  color: #f5a47f !important;
 }
 
 .btn-atomic-tangerine {
